<resources>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="ABOUT_APP">About App</string>
    <string name="ABOUT_APP_CONTENT">"
Copyright HiTi Digital, Inc. 2016
All Rights Reserved."</string>
    <string name="ABOUT_APP_CONTENT2">"
Copyright HiTi Digital, Inc. 2016. All Rights Reserved."</string>
    <string name="ABOUT_APP_VERSION">"
App Version:"</string>
    <string name="ACCOUNT">帳號:</string>
    <string name="ACCOUNT_HINT">請輸入測試帳號</string>
    <string name="ACCOUNT_IS_PA">目前已經是測試帳號</string>
    <string name="ALBUM_SDCARD">Memory Card Album</string>
    <string name="ALBUM_SOURCE">Mobile Album</string>
    <string name="ALL_SAME">Apply to all</string>
    <string name="APPLY_TO_PRINTER">Apply to Printer</string>
    <string name="APPLY_WIFI_SSID_HINT">Apply the above printer SSID and password to:</string>
    <string name="APP_VERSION">App Version:</string>
    <string name="AP_CHANGE_DONE">Ad-hoc Mode</string>
    <string name="ASK_SEL_PRINTER_MODEL">Please Select Printer Model</string>
    <string name="AUTO_POWER_OFF">Auto Power Off:</string>
    <string name="AutoPowerOff_Title">Auto Power Off</string>
    <string name="BACK_HINT">Tap on back button again to exit</string>
    <string name="BORDERTTITLE">Border Setting</string>
    <string name="BORDER_TITLE">"Connecting to Printer, 
reading Memory Card."</string>
    <string name="BRIGHTFACE">Glossy</string>
    <string name="BURN_FIRMWARE_CHECK_DATA">Comparing firmware....</string>
    <string name="BURN_FIRMWARE_SAME_VERSION">Latest firmware has been installed to the printer.</string>
    <string name="BURN_FIRMWARE_SUCCESS">New firmware has been sent to the printer, please wait. Please do not turn off the printer or remove the battery while updating. The printer will restart automatically after the firmware has been updated. Printing can begin after the restart.</string>
    <string name="BurnFirmwareActivity_m_TitleTextView">Firmware Updating</string>
    <string name="CAMERA_SOURCE">Activate Camera</string>
    <string name="CANCEL">Cancel</string>
    <string name="CHANGE_WIFI_MODE">Please connect your smartphone to the correct Wi-Fi SSID</string>
    <string name="CHECK_PRINT">Confirm Printing?</string>
    <string name="CHECK_PRINT_STATUS">Checking printer…</string>
    <string name="CHECK_SHARE_PHOTO">File saved, share photo?</string>
    <string name="CLEAN_ERROR_COVER_NOT_OPEN">Ribbon cassette or photo paper was not removed, please remove it</string>
    <string name="CLEAN_LATER">Later</string>
    <string name="CLEAN_MODE_DONE">Cleaning completed, please remove cleaning paper and separator</string>
    <string name="CLEAN_MODE_HINT">You have printed more than 120 copies, to secure your printing quality, it is advised to use our cleaning kit with our cleaning mode in the settings page.</string>
    <string name="CLEAN_MODE_STEP1">Please Remove ribbon cassette from printer and photo paper from the paper cassette</string>
    <string name="CLEAN_MODE_STEP2">Before putting in the cleaning paper, please remove the yellow protective cover on both sides of the paper</string>
    <string name="CLEAN_MODE_STEP3">Make sure the front side of the cleaning paper faces up, and place it in the paper cassette</string>
    <string name="CLEAN_MODE_STEP4">Click next to start cleaning</string>
    <string name="CLEAN_MODE_TITLE">Cleaning Mode</string>
    <string name="CLEAN_MODE_WAIT_MESSAGE">Processing, please wait……</string>
    <string name="CLEAN_NEXT_STEP">Next Step</string>
    <string name="CLEAN_NOW">Clean now</string>
    <string name="CLEAN_STEP1">Step 1.</string>
    <string name="CLEAN_STEP2">Step 2.</string>
    <string name="CLEAN_STEP3">Step 3.</string>
    <string name="CLEAN_STEP4">Step 4.</string>
    <string name="CLOSE_INFRA_MODE">Disable Infra Mode</string>
    <string name="COMMON_PRINT_HINT">"
 Press print to continue printing 
 after eliminating the problem"</string>
    <string name="COMPARE_BORDER">Matching</string>
    <string name="COMPLETE">Completed</string>
    <string name="CONNECTING">Connecting…</string>
    <string name="CONN_SEARCHING">Searching Wi-Fi…</string>
    <string name="CONN_SUCCESS">Connected</string>
    <string name="CONTRAST">Contrast</string>
    <string name="CREATE_BITMAP_ERROR_PHOTO_RATIO">Photo ratio unsupported</string>
    <string name="CREATE_BITMAP_FILE_FORMAT">Photo decoding failed</string>
    <string name="CREATE_BITMAP_OUT_OF_MEMORY">Out of memory, click on OK to exit current editor. Please try again later; apologies for any inconveniences.</string>
    <string name="CREATE_BITMAP_SD_CARD_MAYBE_FULL">SD card full</string>
    <string name="CREATE_BITMAP_SD_CARD_NOT_EXIST">SD card does not exist</string>
    <string name="CREATE_BITMAP_SIZE_IS_ZERO">Photo file error</string>
    <string name="CREATE_BITMAP_SOURCE_NOT_FOUND">Photo not found</string>
    <string name="CREATE_BITMAP_UNKNOWN">Photo file error</string>
    <string name="CURRENT_AUTO_POWER_OFF_TIME">Current auto power off Time:</string>
    <string name="DATA_DELIVERY">Data delivering…</string>
    <string name="DECODE_FAILURE">Photo loading failed, please load album again</string>
    <string name="DELBORDER">Delete border</string>
    <string name="DELBORDERTITLE">Border deleted</string>
    <string name="DESCRIPTION">Content Description</string>
    <string name="DIALOG_CLOSE">Close</string>
    <string name="DIALOG_CONN_WIFI_SEL_CURRENT">"Current Connection:
"</string>
    <string name="DIALOG_CONN_WIFI_SEL_LAST">"Previous Connection:
"</string>
    <string name="DIALOG_CONN_WIFI_TITLE">Select Connection</string>
    <string name="DIALOG_LEAVE_MSG1">"Cancel printing, return to previous page? 
 If not, return to homepage"</string>
    <string name="DISCONNECT">Disconnected</string>
    <string name="DUPLEX_2UP_NUMBER_HINT">Please select a multiple of 4 when doing 4x6 duplex printing; and select a multiple of 2 for 6x6 or 6x8 duplex printing. Please return to previous page to edit your photo selections.</string>
    <string name="EDIT_EFFECT">each kind of effects</string>
    <string name="EDIT_PREVIEW">preview monitor</string>
    <string name="ERROR">Error occurred</string>
    <string name="ERROR_BUSY_INITIAL">Printer Busy</string>
    <string name="ERROR_FIND_NO_STORAGEID">Please make sure the memory card is successfully plugged into the printer</string>
    <string name="ERROR_MODEL">Printer model does not match the selected model in Prinbiz App, please double check</string>
    <string name="ERROR_PRINTER_0001">Please take out the printed photo.</string>
    <string name="ERROR_PRINTER_0100">0100: Cover open, please make sure the door is closed.</string>
    <string name="ERROR_PRINTER_0100_P310W">0100: Cover open or ribbon missing, please close cover door or put in ribbon.</string>
    <string name="ERROR_PRINTER_0101">0101: Cover open, please make sure the door is closed.</string>
    <string name="ERROR_PRINTER_0102">0102: Cover open, please make sure the door is closed.</string>
    <string name="ERROR_PRINTER_0201">0201: Ribbon missing, please check the ribbon.</string>
    <string name="ERROR_PRINTER_0203">0203: Unsupported ribbon type, please check the ribbon.</string>
    <string name="ERROR_PRINTER_0300">0300: Ribbon empty, please change the ribbon.</string>
    <string name="ERROR_PRINTER_0301">"0301: Ribbon error!Please refer to product's user manual to eliminate the problem."</string>
    <string name="ERROR_PRINTER_0302">"0302: Ribbon error!Please refer to product's user manual to eliminate the problem."</string>
    <string name="ERROR_PRINTER_0400">0400: Make sure paper is loaded at correct position.</string>
    <string name="ERROR_PRINTER_0400_1">0400: Make sure paper is loaded at correct position.</string>
    <string name="ERROR_PRINTER_0401">0401: Paper out! Please Change a new paper roll.</string>
    <string name="ERROR_PRINTER_0500">"0500: Paper jam! Please refer to product's user manual to eliminate the problem."</string>
    <string name="ERROR_PRINTER_0501">"0501: Paper jam! Please refer to product's user manual to eliminate the problem."</string>
    <string name="ERROR_PRINTER_0502">"0502: Paper jam! Please refer to product's user manual to eliminate the problem."</string>
    <string name="HOD_MSG">HOD(High Optical Density)mode expands the depth of color gradation and enriches the image hierarchy, making the printout sharper and more stereoscopic.</string>
    <string name="IMPORTBORDER">Import border</string>
    <string name="INFRA_PRINTER_SSID">Printer Name :</string>
    <string name="INFRA_WIFI_PASSWORD">Wi-Fi Password</string>
    <string name="INFRA_WIFI_SSID">Wi-Fi SSID</string>
    <string name="MSG_FACE">Select default printing options</string>
    <string name="MSG_PWD">Password :</string>
    <string name="MSG_PWD_CHECK">Please input printer password</string>
    <string name="MSG_SHARPEN">Sharpness Adjustment</string>
    <string name="NOW_WIFI">Wi-Fi:</string>
    <string name="OK">OK</string>
    <string name="OPEN_INFRA_MODE">Enable Infra Mode</string>
    <string name="PLEASE_INPUT_INFRA_WIFI_SSID">Please input Wi-Fi SSID</string>
    <string name="PLEASE_INPUT_PASSWORD">Please input password</string>
    <string name="PRINT_DONE">Printing Complete</string>
    <string name="QTY_HOD">HOD</string>
    <string name="SET_TITLE">Settings</string>
    <string name="SHADOWFACE">Matte</string>
    <string name="TITLE_WIFI_SETTING">Printer Wi-Fi Settings</string>
    <string name="descriptions">"1.WiFi connection improved.
2.Printing quality improved."</string>
    <string name="desc">desc</string>
</resources>