<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/RelativeLayout1" android:layout_width="-1" android:layout_height="-1">
    <LinearLayout android:orientation="1" android:background="@color/WHITE" android:layout_width="250dp" android:layout_height="-2" android:layout_centerInParent="true">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="@color/DARK_GRAY" android:gravity="1" android:id="@id/m_PwdMSGTextView" android:layout_width="-1" android:layout_height="-2" android:layout_margin="10dp" android:text="@string/MSG_PWD_CHECK" />
        <TableRow android:id="@id/tableRow2" android:layout_width="-1" android:layout_height="-2">
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="@color/DARK_GRAY" android:id="@id/textView1" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="10dp" android:text="@string/MSG_PWD" />
            <EditText android:id="@id/m_PwdEditText" android:focusable="true" android:layout_width="-2" android:layout_height="-2" android:layout_marginRight="10dp" android:hint="@string/PLEASE_INPUT_PASSWORD" android:ems="10" android:inputType="81" />
        </TableRow>
        <TableRow android:gravity="1" android:id="@id/tableRow1" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="10dp">
            <Button android:id="@id/m_CancelButton" android:layout_width="-2" android:layout_height="-2" android:layout_marginRight="5dp" android:text="@string/CANCEL" style="?unknown_attr_ref: 101032f" />
            <Button android:id="@id/m_OKButton" android:layout_width="60dp" android:layout_height="-2" android:layout_marginLeft="5dp" android:text="@string/OK" style="?unknown_attr_ref: 101032f" />
        </TableRow>
    </LinearLayout>
</RelativeLayout>
